[package]
name = "arrayref"
version = "0.3.6"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "Macros to take array references of slices"
license = "BSD-2-Clause"
repository = "https://github.com/droundy/arrayref"
documentation = "https://docs.rs/arrayref"
edition = "2021"

[dev-dependencies]
quickcheck = "0.6"
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "benches"
harness = false
path="benches/benches.rs"
